deploy/k8s/base/manifests/21-device-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-management
  namespace: bootstrap
spec:
  selector:
    app: device-management
  ports:
    - name: http
      port: 80
      targetPort: 3001
  type: ClusterIP
