deploy/k8s/base/manifests/22-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-management-admin
  namespace: bootstrap
  labels:
    app: device-management-admin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3001
      name: http
  selector:
    app: device-management-admin
