deploy/k8s/base/manifests/41-adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: bootstrap
spec:
  selector:
    app: adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
